--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <script src="libraries/p5.min.js"></script>
     <!-- <script src="libraries/p5.sound.min.js"></script> -->
-    <script src="tile.js"></script>
+    <script src="tileL.js"></script>
+    <script src="tileT.js"></script>
+    <script src="tileBlank.js"></script>
   </head>
 
   <body>
