--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="sketch.js"></script>
     <script src="tileL.js"></script>
     <script src="tileT.js"></script>
+    <script src="tileCross.js"></script>
     <script src="tileBlank.js"></script>
   </head>
 
