Added straight line tile

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="tileL.js"></script>
     <script src="tileT.js"></script>
     <script src="tileCross.js"></script>
+    <script src="tileLine.js"></script>
     <script src="tileBlank.js"></script>
   </head>
 
